# Mavec

./: .gitignore  CMakeLists.txt  compile.bat  main.cpp
headers/: mavec.h
src/: main.cpp  mavec.tpp
